--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="teapot.css">
+        <link rel="icon" 
+      type="image/png" 
+      href="download.jpg">
         <title>Error 418: I'm a teapot</title>
     </head>
     <body>
