--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
         <title>Error 418: I'm a teapot</title>
     </head>
     <body>
-        <h1>418 Error:</h1>
-        <br>
-        <h3>I'm a teapot</h3>
-        <br>
-        <img id="teapot" src="download.jpg">
-        <br>
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol">Click here to learn more</a>
+        <div class="container">
+            <h1>418 Error:</h1>
+            <br>
+            <h3>I'm a teapot</h3>
+            <br>
+            <img id="teapot" src="download.jpg">
+            <br>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol">Click here to learn more</a>
+        </div>
+        
     </body>
 </html>
